Adicionado a pagina Inspire-se

--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
             <img src="./img/logo.jpeg" alt="Logo mulherestech">
         </div>
         <nav>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="Inspire-se.html">Inspire-se</a>
             <a href="Workplaces.html">Workplaces</a>
             <a href="Cursos.html">Cursos</a>
