--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         
         <nav>
             <a href="#">Home</a>
-            <a href="Inspire-se.html">Quem Somos</a>
+            <a href="Inspire-se.html">Inspire-se</a>
             <a href="Workplaces.html">Workplaces</a>
             <a href="Cursos.html">Cursos</a>
-            <a href="fale_conosco.html">Fale Conosco</a>
+            <a href="contato.html">Contato</a>
         </nav>
 
     </header>
