Adicionado o atributo targert ao link de midias sociais

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <footer>
 	<span>Mídias Sociais</span>
 	<ul>
-		<li><a href=”facebook.com/mulherestech”>Facebook</a></li>
-		<li><a href=”instagram.com/mulherestech”>Instagram</a></li>
-		<li><a href=”twitter.com/mulherestech”>Twitter</a></li>
+        <li><a href="https://facebook.com/mulherestech" target="_blank">Facebook</a></li>
+        <li><a href="https://instagram.com/mulherestech" target="_blank">Instagram</a></li>
+        <li><a href="https://twitter.com/mulherestech" target="_blank">Twitter</a></li>
 	</ul>
     <span>Contato</span>
     
